--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,7 +28,6 @@ body{
 }
 
 .slider{
-	background-color: #68C3A3;
 	position: relative;
 	width: 100%;
 	height: 100vh;
@@ -46,9 +45,9 @@ body{
 	transition-timing-function: cubic-bezier(.22,1.61,.65,1);
 	transition-duration: 1s;
 	background-visibility: hidden;
-	transition-delay: .75s;
 	
 	transform: translateZ(0);
+
 }
 
 .slide{
@@ -64,50 +63,55 @@ body{
 	text-align: center;
 	font-size: 2rem;
 	color: white;
-	
-	&.active{
-		transition-delay: 2s;
-	}
-	
-
 }
+
+.allSlide{
+	background-color: #e94f37;
+}
+.doneSlide{
+	background-color: #68C3A3;
+}
+.undoneSlide{
+	background-color: #3f88c5;
+}
+
 
 .slider-nav{
 	z-index: 5000;
-	position: absolute;
-	top: 5%;
-	left: 50%;
 	padding: 0;
-	width: 45vw;
+	width: 100%;
 	transform: translateX(-50%);
 	text-align: center;
-
 	
-	>div{
-		float: left;
-		border: 1px solid white;
-		width: 14vw;
-		height: 50px;
-		z-index: 2;
-		margin:5px;
+	>#button-wrapper{
 		padding:5px;
 		display: inline-block;
-		cursor: pointer;		
-		transition-duration: .25s;
-		background-color: #ddd;
-		box-shadow: inset 0px 2px 0px 0px rgba(238,238,238,1), 0px 1px 1px rgba(0, 0, 0, 0.4);
-		border-radius: 6px;
-		
-		&:hover{
-			opacity: 1;
+		width:33.33%;
+
+		>div{
+			float: center;
+			border: 1px solid white;
+			width: 100%;
+			height: 50px;
+			z-index: 2;
+			padding:5px;
+			cursor: pointer;		
+			transition-duration: .25s;
+			background-color: #ddd;
+			box-shadow: inset 0px 2px 0px 0px rgba(238,238,238,1), 0px 1px 1px rgba(0, 0, 0, 0.4);
+			border-radius: 6px;
+			opacity: .7;
+
+			&.active{
+				background-color: white;
+				transform: scale(1);
+				opacity: 1;
+			}
+			&:hover{
+				background-color: white;
+			}
 		}
-		
-		&.active{
-			background-color: white;
-			transform: scale(1);
-			opacity: 1;
-		}
-		
+	
 		h3{
 			color: #666;
 			font-size: 30px;
@@ -115,45 +119,76 @@ body{
 	}
 }
 
-
+#input-wrapper{
+	z-index:1000;
+	width: 50%;
+	position: fixed;
+	top:5%;
+	left:50%;
+}
 
 textarea{  
-	position:absolute;
-	top: 15%;
-	left: 50%;
 	transform: translateX(-50%);
-
+	margin-top: 10px;
+	
 	z-index:1000;
 	display:block;
 	outline:none;
 	box-sizing: padding-box;
-	overflow:hidden;
+	overflow-y:scroll;
 	resize:none;
+	padding: 5px;
 	
-	padding:10px;
-	width:45vw;
-	font-size:14px;
+	color: #666;
+	width: calc(100% - 10px);
+	height: 50px;
+	font-size:30px;
 	border-radius:6px;
 	box-shadow:2px 2px 8px rgba(0,0,0,.3);
 	border:0;
+	text-align: center;
+}
+
+textarea:focus::-webkit-input-placeholder{
+    color: transparent;
 }
 
 .task-list{
 	position:absolute;
-	top: 30%;
-	left: 50%;
-	width:35%;
+	top: 22%;
+	left: calc(25% + 5px);
+	width:50%;
+	height: 75%;
+	overflow-y: scroll;
 	text-align: left;
-	transform: translateX(-50%);
+	padding:0;
+	margin:0;
 }
 .task-wrapper{
 	display: flex;
+	margin-top: 50px;
+	margin:0;
+	border:0;
 	padding: 10px;
+	width: calc(100% - 10px);
+	background: white;
+	color: #666;
+	font-size:30px;
+	border-radius:6px;
+	box-shadow:2px 2px 8px rgba(0,0,0,.3);
 }
+#task-element{
+	margin-top: 15px;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 .tickBox{
 	margin-right: 15px;
 	background: white;
-	width: 20px;
+	min-width: 20px;
 	height: 20px;
 	border: 3px solid #666;
 	transform: translateY(50%);
